[package]
name = "codesign"
version = "0.1.1"
authors = ["Kjartan F. Kvamme <forbjok@gmail.com>"]
license = "MIT/Apache-2.0"
description = "Microsoft code signing library (and utility) for Rust"
repository = "https://github.com/forbjok/rust-codesign"
readme = "README.md"

[dependencies]
bitness = "~0.3.0"
failure = "~0.1.1"
log = "~0.4.1"
winreg = "~0.5.0"
